--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@line/liff": "^2.26.1",
+    "browser-image-compression": "^2.0.2",
     "formidable": "^3.5.4",
     "nuxt": "^3.17.5",
     "vue": "^3.5.16",
